# OPEYE

./: .gitattributes  README.md
src/: BUILD.md  CMakeLists.txt  README.md  dlib
src/magnifier/: MagnifyingGlassWidget.cpp  MagnifyingGlassWidget.h  MagnifyingGlassWidget.ui  MagnifyingGlassWindow.cpp  MagnifyingGlassWindow.h  MagnifyingGlassWindow.qrc  MagnifyingGlassWindow.ui  main.cpp
src/magnifier/InputInterface/: EyeTrackerInput.cpp  EyeTrackerInput.h  InputInterface.h  StandardInput.cpp  StandardInput.h
src/magnifier/Settings/: SettingsOperator.cpp  SettingsOperator.h
src/tools/: .gitignore
src/tools/src/: main.cpp
src/tools/src/tasks/: evaluationtask.cpp  evaluationtask.h  magnifytask.cpp  magnifytask.h  pupilcentertask.cpp  pupilcentertask.h  recordertask.cpp  recordertask.h  task.cpp  task.h  trackertask.cpp  trackertask.h  traintask.cpp  traintask.h
src/tracker/: defines.h
src/tracker/data/: calibration.cpp  calibration.h  library.cpp  library.h  network.cpp  network.h  tracker.cpp  tracker.h  types.h
src/tracker/utils/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
src/tracker/video/: frame.cpp  frame.h  frameprocess.cpp  frameprocess.h  screen.cpp  screen.h  webcam.cpp  webcam.h
utils/: merge_samples.py
